@@ -21,9 +21,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jdesktop.swingx</groupId>
+            <groupId>org.jxmapviewer</groupId>
             <artifactId>jxmapviewer2</artifactId>
-            <version>1.3.1</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>com.garmin.fit</groupId>
