@@ -14,15 +14,11 @@ import javafx.scene.control.cell.PropertyValueFactory;
 import de.saring.exerciseviewer.gui.EVContext;
 import de.saring.util.gui.javafx.FormattedNumberCellFactory;
 
-import javax.inject.Inject;
-import javax.inject.Singleton;
-
 /**
  * Controller (MVC) class of the "Laps" panel, which displays all recorded laps of the exercise in a table.
  *
  * @author Stefan Saring
  */
-@Singleton
 public class LapPanelController extends AbstractPanelController {
 
     @FXML
@@ -61,7 +57,6 @@ public class LapPanelController extends AbstractPanelController {
      * @param context the ExerciseViewer UI context
      * @param document the ExerciseViewer document / model
      */
-    @Inject
     public LapPanelController(final EVContext context, final EVDocument document) {
         super(context, document);
     }
