@@ -13,15 +13,11 @@ import de.saring.exerciseviewer.data.RecordingMode;
 import de.saring.exerciseviewer.gui.EVContext;
 import de.saring.util.gui.javafx.FormattedNumberCellFactory;
 
-import javax.inject.Inject;
-import javax.inject.Singleton;
-
 /**
  * Controller (MVC) class of the "Samples" panel, which displays all recorded samples of the exercise in a table.
  *
  * @author Stefan Saring
  */
-@Singleton
 public class SamplePanelController extends AbstractPanelController {
 
     @FXML
@@ -48,7 +44,6 @@ public class SamplePanelController extends AbstractPanelController {
      * @param context the ExerciseViewer UI context
      * @param document the ExerciseViewer document / model
      */
-    @Inject
     public SamplePanelController(final EVContext context, final EVDocument document) {
         super(context, document);
     }
